Added a comment for swagger2cxf-maven-plugin

--- a/components/org.wso2.carbon.identity.oauth.scope.endpoint/pom.xml
+++ b/components/org.wso2.carbon.identity.oauth.scope.endpoint/pom.xml
@@ -84,6 +84,7 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+            <!-- Plugin for generating the swagger server stubs-->
             <!--plugin>
                 <groupId>org.wso2.maven.plugins</groupId>
                 <artifactId>swagger2cxf-maven-plugin</artifactId>
