--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <module>components/org.wso2.carbon.identity.discovery</module>
         <module>components/org.wso2.carbon.identity.oauth.scope.endpoint</module>
         <module>components/org.wso2.carbon.identity.webfinger</module>
+        <module>components/org.wso2.carbon.identity.oauth.dcr.endpoint</module>
 
         <module>features/org.wso2.carbon.identity.oauth.common.feature</module>
         <module>features/org.wso2.carbon.identity.oauth.feature</module>
