--- a/pom.xml
+++ b/pom.xml
@@ -372,6 +372,12 @@
                 <version>${project.version}</version>
                 <type>zip</type>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
+                <artifactId>org.wso2.carbon.identity.oauth2.dcr.endpoint</artifactId>
+                <version>${project.version}</version>
+                <type>war</type>
+            </dependency>
 
             <!--Swagger Dependencies-->
             <dependency>
