--- a/components/org.wso2.carbon.identity.oauth.scope.endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/org.wso2.carbon.identity.oauth.scope.endpoint/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,33 @@
         <filter-name>CaptchaFilter</filter-name>
         <filter-class>org.wso2.carbon.identity.captcha.filter.CaptchaFilter</filter-class>
     </filter>
+
+    <filter>
+        <filter-name>ContentTypeBasedCachePreventionFilter</filter-name>
+        <filter-class>
+            org.wso2.carbon.ui.filters.cache.ContentTypeBasedCachePreventionFilter
+        </filter-class>
+        <init-param>
+            <param-name>patterns</param-name>
+            <param-value>"text/html" ,"application/json" ,"plain/text"</param-value>
+        </init-param>
+        <init-param>
+            <param-name>filterAction</param-name>
+            <param-value>enforce</param-value>
+        </init-param>
+        <init-param>
+            <param-name>httpHeaders</param-name>
+            <param-value>
+                Cache-Control: no-store, no-cache, must-revalidate, private
+            </param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>ContentTypeBasedCachePreventionFilter</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
