--- a/components/org.wso2.carbon.identity.oauth.scope.endpoint/src/main/resources/api.identity.oauth2.scope.endpoint.yaml
+++ b/components/org.wso2.carbon.identity.oauth.scope.endpoint/src/main/resources/api.identity.oauth2.scope.endpoint.yaml
@@ -65,7 +65,7 @@ paths:
 
       x-wso2-response: |
         "HTTP/1.1 201 Created"
-        {"name": "profile", "description": "Add a new Profile", "bindings": ["role1", "role2"]}
+        {"name": "profile", "description": "get all profile information", "bindings": ["role1", "role2"]}
 
       summary: |
         Registers a Scope
@@ -276,7 +276,7 @@ paths:
       description: |
          This API is used to check scope existance using scope name.
       x-wso2-request: |
-        curl -X GET -H "Authorization: Basic YWRtaW46YWRtaW4=" -H "Content-Type: application/json" -d '{}' "https://localhost:9443/api/identity/oauth2/v1.0/scopes/name/openid"
+        curl -X GET -H "Authorization: Basic YWRtaW46YWRtaW4=" -H "Content-Type: application/json" -d '{}' "https://localhost:9443/api/identity/oauth2/v1.0/scopes/name/profile"
 
       x-wso2-response: |
         "HTTP/1.1 200 OK"
@@ -331,10 +331,12 @@ definitions:
           type: string
 
 #-----------------------------------------------------
-# The Scope Object
+# The Update Scope Object
 #-----------------------------------------------------
   scopeToUpdate:
     type: object
+    required:
+      - description
     properties:
       description:
         type: string
