Improvements to OAuth2 DCR swagger definition

--- a/components/org.wso2.carbon.identity.oauth.dcr.endpoint/src/main/resources/api.identity.oauth.dcr.endpoint.yaml
+++ b/components/org.wso2.carbon.identity.oauth.dcr.endpoint/src/main/resources/api.identity.oauth.dcr.endpoint.yaml
@@ -3,7 +3,7 @@ info:
   version: 1.0.0
   title: WSO2 Identity Server OAuth2 Dynamic Client Registration Endpoint
   description: >
-    This document specifies a **OAuth2 Dyanmic Client Registration Endpoint**
+    This document specifies an **OAuth2 Dyanmic Client Registration Endpoint**
     for WSO2 **Identity Server** .
 
 
@@ -49,7 +49,7 @@ paths:
       parameters:
         - name: registrationRequest
           in: body
-          description: Application information to register
+          description: Application information to register.
           required: true
           schema:
             $ref: '#/definitions/registrationRequest'
@@ -93,6 +93,7 @@ paths:
         - name: client_id
           type: string
           in: path
+          description: Unique identifier of the OAuth2 client application.
           required: true
       responses:
         '200':
@@ -124,6 +125,7 @@ paths:
         - name: client_id
           type: string
           in: path
+          description: Unique identifier of the OAuth2 client application.
           required: true
       responses:
         '204':
@@ -163,13 +165,14 @@ paths:
       parameters:
         - name: updateRequest
           in: body
-          description: Application information to update
+          description: Application information to update.
           required: true
           schema:
             $ref: '#/definitions/updateRequest'
         - name: client_id
           type: string
           in: path
+          description: Unique identifier for the OAuth2 client application.
           required: true
       responses:
         '200':
