Fix IDENTITY-6379: OAuth DCRM send Internal Server Error when tried to retrieve application with invalid client id

--- a/components/org.wso2.carbon.identity.oauth.dcr.endpoint/pom.xml
+++ b/components/org.wso2.carbon.identity.oauth.dcr.endpoint/pom.xml
@@ -81,7 +81,7 @@
                             <directory>src/main/webapp</directory>
                         </resource>
                     </webResources>
-                    <warName>api#identity#oauth#dcr#v1.0</warName>
+                    <warName>api#identity#oauth2#dcr#v1.0</warName>
                 </configuration>
             </plugin>
             <!-- Plugin for generating the swagger server stubs-->
