--- a/features/org.wso2.carbon.identity.oauth.dcr.server.feature/pom.xml
+++ b/features/org.wso2.carbon.identity.oauth.dcr.server.feature/pom.xml
@@ -109,7 +109,7 @@
                                     <type>war</type>
                                     <overWrite>true</overWrite>
                                     <outputDirectory>${basedir}/src/main/resources/</outputDirectory>
-                                    <destFileName>api#identity#oauth#dcr#v1.0.war</destFileName>
+                                    <destFileName>api#identity#oauth2#dcr#v1.0.war</destFileName>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
@@ -131,7 +131,7 @@
                                 <resource>
                                     <directory>resources</directory>
                                     <includes>
-                                        <include>api#identity#oauth#dcr#v1.0.war</include>
+                                        <include>api#identity#oauth2#dcr#v1.0.war</include>
                                         <include>p2.inf</include>
                                         <include>build.properties</include>
                                     </includes>
