--- a/pom.xml
+++ b/pom.xml
@@ -437,7 +437,12 @@
                 <version>${powermock.version}</version>
                 <scope>test</scope>
             </dependency>
-
+            <dependency>
+                <groupId>javax</groupId>
+                <artifactId>javaee-web-api</artifactId>
+                <version>${javaee.web.api.version}</version>
+                <scope>test</scope>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -701,6 +706,7 @@
         <jacoco.version>0.7.9</jacoco.version>
         <powermock.version>1.6.6</powermock.version>
         <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
+        <javaee.web.api.version>7.0</javaee.web.api.version>
     </properties>
 
 </project>
