--- a/pom.xml
+++ b/pom.xml
@@ -443,6 +443,12 @@
                 <version>${javaee.web.api.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2database.version}</version>
+                <scope>test</scope>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -707,6 +713,7 @@
         <powermock.version>1.6.6</powermock.version>
         <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
         <javaee.web.api.version>7.0</javaee.web.api.version>
+        <h2database.version>1.0.60</h2database.version>
     </properties>
 
 </project>
