--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ cache:
   directories:
   - .autoconf
   - $HOME/.m2
-script: _JAVA_OPTIONS=-Djava.util.Arrays.useLegacyMergeSort=true mvn clean install
+script: mvn clean install
