Fixing PR comments

--- a/pom.xml
+++ b/pom.xml
@@ -468,6 +468,13 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec.test.version}</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -734,6 +741,9 @@
         <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
         <javaee.web.api.version>7.0</javaee.web.api.version>
         <h2database.version>1.0.60</h2database.version>
+
+        <commons-codec.test.version>1.4</commons-codec.test.version>
+
 
         <!--
             Please do not remove this property until all javadoc comments are fixed. Removing this will cause build
